tests: Ignore new Python 3.10.0a7 ImportWarnings
https://github.com/pypa/setuptools/pull/2517
https://github.com/pypa/setuptools/pull/2523
(something in tox/virtualenv probably uses an older setuptools...)

https://github.com/benjaminp/six/pull/352 (not released yet)

--- a/pytest.ini
+++ b/pytest.ini
@@ -82,4 +82,6 @@ filterwarnings =
     error
     default:Test process .* failed to terminate!:UserWarning
     ignore:_SixMetaPathImporter\.exec_module\(\) not found; falling back to load_module\(\):ImportWarning
+    ignore:VendorImporter\.find_spec\(\) not found; falling back to find_module\(\):ImportWarning
+    ignore:_SixMetaPathImporter\.find_spec\(\) not found; falling back to find_module\(\):ImportWarning
 faulthandler_timeout = 90
