Changed type of statusbar.widgets to PrefixOrString.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1917,7 +1917,7 @@ statusbar.widgets:
   type:
     name: List
     valtype:
-      name: StatusbarWidget
+      name: PrefixOrString
       valid_values:
         - url: "Current page URL."
         - scroll: "Percentage of the current page position like `10%`."
