Revert all prefix-related commits.
This reverts commits 02a64630aa83e37e47a28a60366e1c65f0eba3ac to 4ff204aecc96d77209a18594a14da96af703c43f.

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1917,7 +1917,7 @@ statusbar.widgets:
   type:
     name: List
     valtype:
-      name: PrefixOrString
+      name: StatusbarWidget
       valid_values:
         - url: "Current page URL."
         - scroll: "Percentage of the current page position like `10%`."
@@ -1927,8 +1927,7 @@ statusbar.widgets:
         - tabs: "Current active tab, e.g. `2`."
         - keypress: "Display pressed keys when composing a vi command."
         - progress: "Progress bar for the current page loading."
-      valid_prefixes:
-        - text: "A text widget. Add your own text as content."
+        - text: "A text widget. Currently hard coded content."
     none_ok: true
   default: ['keypress', 'url', 'scroll', 'history', 'tabs', 'progress']
   desc: List of widgets displayed in the statusbar.
