ci: Try additional CodeQL queries

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,6 +190,7 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           languages: javascript, python
+          queries: +security-and-quality
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
 
