ci: Tune down code scanning
Too many false positives, and it seems impossible to ignore a single rule.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -190,7 +190,7 @@ jobs:
         uses: github/codeql-action/init@v1
         with:
           languages: javascript, python
-          queries: +security-and-quality
+          queries: +security-extended
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
 
