Fixed tests and made the bindings proper and configurable

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1156,16 +1156,6 @@ completion.cmd_history_max_items:
 
     0: no history / -1: unlimited
 
-completion.fprompt_history_max_items:
-  default: 100
-  type:
-    name: Int
-    minval: -1
-  desc: >-
-    Number of file paths to save in the file prompt history.
-
-    0: no history / -1: unlimited
-
 completion.height:
   type:
     name: PercOrInt
@@ -1829,10 +1819,20 @@ messages.unfocused:
 
 ## prompt
 
-prompt.filebrowser:
+prompt.filebrowser.enabled:
   type: Bool
   default: true
   desc: Show a filebrowser in download prompts.
+
+prompt.filebrowser.history_max_items:
+  default: 100
+  type:
+    name: Int
+    minval: -1
+  desc: >-
+    Number of file paths to save in the file prompt history.
+
+    0: no history / -1: unlimited
 
 prompt.radius:
   type:
@@ -3685,6 +3685,8 @@ bindings.default:
       <Ctrl-X>: prompt-open-download
       <Ctrl-P>: prompt-open-download --pdfjs
       <Shift-Tab>: prompt-item-focus prev
+      <Ctrl-N>: prompt-history prev
+      <Ctrl-P>: prompt-history next
       <Up>: prompt-item-focus prev
       <Tab>: prompt-item-focus next
       <Down>: prompt-item-focus next
