try to upgrade pip

--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ basepython =
     py38: {env:PYTHON:python3.8}
     py39: {env:PYTHON:python3.9}
     py310: {env:PYTHON:python3.10}
+pip_version = pip
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
@@ -39,6 +40,7 @@ commands =
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
 [testenv:bleeding]
+pip_version = pip
 basepython = {env:PYTHON:python3}
 setenv =
     PYTEST_QT_API=pyqt5
@@ -155,6 +157,7 @@ commands =
     {envpython} scripts/asciidoc2html.py {posargs}
 
 [testenv:pyinstaller-{64,32}]
+pip_version = pip
 basepython = {env:PYTHON:python3}
 passenv = APPDATA HOME PYINSTALLER_DEBUG
 deps =
@@ -215,6 +218,7 @@ commands =
     {envpython} -m sphinx -jauto -W --color {posargs} {toxinidir}/doc/extapi/ {toxinidir}/doc/extapi/_build/
 
 [testenv:build-release]
+pip_version = pip
 basepython = {env:PYTHON:python3}
 passenv = *
 usedevelop = true
