pyqt62 test env

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,7 @@ deps =
     pyqt514: -r{toxinidir}/misc/requirements/requirements-pyqt-5.14.txt
     pyqt515: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.txt
     pyqt5150: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.0.txt
+    pyqt62: -r{toxinidir}/misc/requirements/requirements-pyqt-6.2.txt
 commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
