--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -2523,7 +2523,7 @@ zoom.text_only:
 ## colors
 
 colors.completion.fg:
-  default: ["white", "white", "white"]
+  default: ["#fbf1c7", "#87CEEB", "#CCCCFF"]
   type:
     name: ListOrValue
     valtype: QtColor
@@ -2534,7 +2534,7 @@ colors.completion.fg:
     one for each column.
 
 colors.completion.odd.bg:
-  default: '#444444'
+  default: '#282828'
   type: QssColor
   desc: Background color of the completion widget for odd rows.
 
@@ -2544,63 +2544,62 @@ colors.completion.even.bg:
   desc: Background color of the completion widget for even rows.
 
 colors.completion.category.fg:
-  default: white
+  default: '#9ae4e4'
   type: QtColor
   desc: Foreground color of completion widget category headers.
 
 colors.completion.category.bg:
-  default: 'qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 #888888,
-    stop:1 #505050)'
+  default: '#2a2f2f'
   type: QssColor
   desc: Background color of the completion widget category headers.
 
 colors.completion.category.border.top:
-  default: black
+  default: '#2a2f2f'
   type: QssColor
   desc: Top border color of the completion widget category headers.
 
 colors.completion.category.border.bottom:
-  default: black
+  default: '#2a2f2f'
   type: QssColor
   desc: Bottom border color of the completion widget category headers.
 
 colors.completion.item.selected.fg:
-  default: black
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color of the selected completion item.
 
 colors.completion.item.selected.bg:
-  default: '#e8c000'
+  default: '#69647c'
   type: QssColor
   desc: Background color of the selected completion item.
 
 colors.completion.item.selected.border.top:
-  default: '#bbbb00'
+  default: '#69647c'
   type: QssColor
   desc: Top border color of the selected completion item.
 
 colors.completion.item.selected.border.bottom:
-  default: '#bbbb00'
+  default: '#69647c'
   type: QssColor
   desc: Bottom border color of the selected completion item.
 
 colors.completion.item.selected.match.fg:
-  default: '#ff4444'
+  default: '#19fea1'
   type: QtColor
   desc: Foreground color of the matched text in the selected completion item.
 
 colors.completion.match.fg:
-  default: '#ff4444'
+  default: '#19fea1'
   type: QtColor
   desc: Foreground color of the matched text in the completion.
 
 colors.completion.scrollbar.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Color of the scrollbar handle in the completion view.
 
 colors.completion.scrollbar.bg:
-  default: '#333333'
+  default: '#2a2f2f'
   type: QssColor
   desc: Color of the scrollbar in the completion view.
 
@@ -2614,7 +2613,7 @@ colors.contextmenu.menu.bg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#282828'
   desc: >-
     Background color of the context menu.
 
@@ -2624,7 +2623,7 @@ colors.contextmenu.menu.fg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#e1c2ad'
   desc: >-
     Foreground color of the context menu.
 
@@ -2634,7 +2633,7 @@ colors.contextmenu.selected.bg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#544c54'
   desc: >-
     Background color of the context menu's selected item.
 
@@ -2644,7 +2643,7 @@ colors.contextmenu.selected.fg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#e1c2ad'
   desc: >-
     Foreground color of the context menu's selected item.
 
@@ -2654,7 +2653,7 @@ colors.contextmenu.disabled.bg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#6a676a'
   desc: >-
     Background color of disabled items in the context menu.
 
@@ -2664,34 +2663,34 @@ colors.contextmenu.disabled.fg:
   type:
     name: QssColor
     none_ok: true
-  default: null
+  default: '#bdae93'
   desc: >-
     Foreground color of disabled items in the context menu.
 
     If set to null, the Qt default is used.
 
 colors.downloads.bar.bg:
-  default: black
+  default: '#282828'
   type: QssColor
   desc: Background color for the download bar.
 
 colors.downloads.start.fg:
-  default: white
+  default: '#282828'
   type: QtColor
   desc: Color gradient start for download text.
 
 colors.downloads.start.bg:
-  default: '#0000aa'
+  default: '#55b9bb'
   type: QtColor
   desc: Color gradient start for download backgrounds.
 
 colors.downloads.stop.fg:
-  default: white
+  default: '#282828'
   type: QtColor
   desc: Color gradient end for download text.
 
 colors.downloads.stop.bg:
-  default: '#00aa00'
+  default: '#8FBC8B'
   type: QtColor
   desc: Color gradient stop for download backgrounds.
 
@@ -2706,23 +2705,22 @@ colors.downloads.system.bg:
   desc: Color gradient interpolation system for download backgrounds.
 
 colors.downloads.error.fg:
-  default: white
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color for downloads with errors.
 
 colors.downloads.error.bg:
-  default: red
+  default: '#cd5c5c'
   type: QtColor
   desc: Background color for downloads with errors.
 
 colors.hints.fg:
-  default: black
+  default: '#282828'
   type: QssColor
   desc: Font color for hints.
 
 colors.hints.bg:
-  default: qlineargradient(x1:0, y1:0, x2:0, y2:1,
-    stop:0 rgba(255, 247, 133, 0.8), stop:1 rgba(255, 197, 66, 0.8))
+  default: '#ffb885'
   type: QssColor
   desc: >-
     Background color for hints.
@@ -2730,228 +2728,228 @@ colors.hints.bg:
     Note that you can use a `rgba(...)` value for transparency.
 
 colors.hints.match.fg:
-  default: green
+  default: '#69647c'
   type: QtColor
   desc: Font color for the matched part of hints.
 
 colors.keyhint.fg:
-  default: '#FFFFFF'
+  default: '#a88489'
   type: QssColor
   desc: Text color for the keyhint widget.
 
 colors.keyhint.suffix.fg:
-  default: '#FFFF00'
+  default: '#fbf1c7'
   type: QssColor
   desc: Highlight color for keys to complete the current keychain.
 
 colors.keyhint.bg:
-  default: rgba(0, 0, 0, 80%)
+  default: '#282828'
   type: QssColor
   desc: Background color of the keyhint widget.
 
 colors.messages.error.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Foreground color of an error message.
 
 colors.messages.error.bg:
-  default: red
+  default: '#cd5c5c'
   type: QssColor
   desc: Background color of an error message.
 
 colors.messages.error.border:
-  default: '#bb0000'
+  default: '#cd5c5c'
   type: QssColor
   desc: Border color of an error message.
 
 colors.messages.warning.fg:
-  default: black
+  default: '#282828'
   type: QssColor
   desc: Foreground color of a warning message.
 
 colors.messages.warning.bg:
-  default: darkorange
+  default: '#ffa07a'
   type: QssColor
   desc: Background color of a warning message.
 
 colors.messages.warning.border:
-  default: '#d47300'
+  default: '#ffa07a'
   type: QssColor
   desc: Border color of a warning message.
 
 colors.messages.info.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Foreground color of an info message.
 
 colors.messages.info.bg:
-  default: black
+  default: '#2E8B57'
   type: QssColor
   desc: Background color of an info message.
 
 colors.messages.info.border:
-  default: '#333333'
+  default: '#2E8B57'
   type: QssColor
   desc: Border color of an info message.
 
 colors.prompts.fg:
-  default: white
+  default: '#e1c2ad'
   type: QssColor
   desc: Foreground color for prompts.
 
 colors.prompts.border:
-  default: 1px solid gray
+  default: 1px solid '#33273e'
   type: String
   desc: Border used around UI elements in prompts.
 
 colors.prompts.bg:
-  default: '#444444'
+  default: '#544c54'
   type: QssColor
   desc: Background color for prompts.
 
 colors.prompts.selected.fg:
-  default: white
+  default: '#e1c2ad'
   type: QssColor
   desc: Foreground color for the selected item in filename prompts.
 
 colors.prompts.selected.bg:
-  default: grey
+  default: '#33273e'
   type: QssColor
   desc: Background color for the selected item in filename prompts.
 
 colors.statusbar.normal.fg:
-  default: white
+  default: '#a89984'
   type: QssColor
   desc: Foreground color of the statusbar.
 
 colors.statusbar.normal.bg:
-  default: black
+  default: '#282828'
   type: QssColor
   desc: Background color of the statusbar.
 
 colors.statusbar.insert.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Foreground color of the statusbar in insert mode.
 
 colors.statusbar.insert.bg:
-  default: darkgreen
+  default: '#4b426a'
   type: QssColor
   desc: Background color of the statusbar in insert mode.
 
 colors.statusbar.passthrough.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Foreground color of the statusbar in passthrough mode.
 
 colors.statusbar.passthrough.bg:
-  default: darkblue
+  default: '#404f6c'
   type: QssColor
   desc: Background color of the statusbar in passthrough mode.
 
 colors.statusbar.private.fg:
-  default: white
+  default: '#CCCCFF'
   type: QssColor
   desc: Foreground color of the statusbar in private browsing mode.
 
 colors.statusbar.private.bg:
-  default: '#666666'
+  default: '#282828'
   type: QssColor
   desc: Background color of the statusbar in private browsing mode.
 
 colors.statusbar.command.fg:
-  default: white
+  default: '#dbcaab'
   type: QssColor
   desc: Foreground color of the statusbar in command mode.
 
 colors.statusbar.command.bg:
-  default: black
+  default: '#3c3836'
   type: QssColor
   desc: Background color of the statusbar in command mode.
 
 colors.statusbar.command.private.fg:
-  default: white
+  default: '#CCCCFF'
   type: QssColor
   desc: Foreground color of the statusbar in private browsing + command mode.
 
 colors.statusbar.command.private.bg:
-  default: darkslategray
+  default: '#3c3836'
   type: QssColor
   desc: Background color of the statusbar in private browsing + command mode.
 
 colors.statusbar.caret.fg:
-  default: white
+  default: '#e1c2ad'
   type: QssColor
   desc: Foreground color of the statusbar in caret mode.
 
 colors.statusbar.caret.bg:
-  default: purple
+  default: '#544c54'
   type: QssColor
   desc: Background color of the statusbar in caret mode.
 
 colors.statusbar.caret.selection.fg:
-  default: white
+  default: '#fbf1c7'
   type: QssColor
   desc: Foreground color of the statusbar in caret mode with a selection.
 
 colors.statusbar.caret.selection.bg:
-  default: '#a12dff'
+  default: '#584658'
   type: QssColor
   desc: Background color of the statusbar in caret mode with a selection.
 
 colors.statusbar.progress.bg:
-  default: white
+  default: '#83a598'
   type: QssColor
   desc: Background color of the progress bar.
 
 colors.statusbar.url.fg:
-  default: white
+  default: '#bdae93'
   type: QssColor
   desc: Default foreground color of the URL in the statusbar.
 
 colors.statusbar.url.error.fg:
-  default: orange
+  default: '#ff6350'
   type: QssColor
   desc: Foreground color of the URL in the statusbar on error.
 
 colors.statusbar.url.hover.fg:
-  default: aqua
+  default: '#9ae4e4'
   type: QssColor
   desc: Foreground color of the URL in the statusbar for hovered links.
 
 colors.statusbar.url.success.http.fg:
-  default: white
+  default: '#fb8a7c'
   type: QssColor
   desc: Foreground color of the URL in the statusbar on successful load (http).
 
 colors.statusbar.url.success.https.fg:
-  default: lime
+  default: '#f9d6bd'
   type: QssColor
   desc: Foreground color of the URL in the statusbar on successful load
     (https).
 
 colors.statusbar.url.warn.fg:
-  default: yellow
+  default: '#d3869b'
   type: QssColor
   desc: "Foreground color of the URL in the statusbar when there's a warning."
 
 colors.tabs.bar.bg:
-  default: '#555555'
+  default: '#282828'
   type: QssColor
   desc: Background color of the tab bar.
 
 colors.tabs.indicator.start:
-  default: '#0000aa'
+  default: '#55b9bb'
   type: QtColor
   desc: Color gradient start for the tab indicator.
 
 colors.tabs.indicator.stop:
-  default: '#00aa00'
+  default: '#19fea1'
   type: QtColor
   desc: Color gradient end for the tab indicator.
 
 colors.tabs.indicator.error:
-  default: '#ff0000'
+  default: '#fb343c'
   type: QtColor
   desc: Color for the tab indicator on errors.
 
@@ -2961,82 +2959,82 @@ colors.tabs.indicator.system:
   desc: Color gradient interpolation system for the tab indicator.
 
 colors.tabs.odd.fg:
-  default: white
+  default: '#e1c2ad'
   type: QtColor
   desc: Foreground color of unselected odd tabs.
 
 colors.tabs.odd.bg:
-  default: grey
+  default: '#544c54'
   type: QtColor
   desc: Background color of unselected odd tabs.
 
 colors.tabs.even.fg:
-  default: white
+  default: '#e1c2ad'
   type: QtColor
   desc: Foreground color of unselected even tabs.
 
 colors.tabs.even.bg:
-  default: darkgrey
+  default: '#685f68'
   type: QtColor
   desc: Background color of unselected even tabs.
 
 colors.tabs.selected.odd.fg:
-  default: white
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color of selected odd tabs.
 
 colors.tabs.selected.odd.bg:
-  default: black
+  default: '#3f91c5'
   type: QtColor
   desc: Background color of selected odd tabs.
 
 colors.tabs.selected.even.fg:
-  default: white
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color of selected even tabs.
 
 colors.tabs.selected.even.bg:
-  default: black
+  default: '#3f91c5'
   type: QtColor
   desc: Background color of selected even tabs.
 
 colors.tabs.pinned.odd.fg:
-  default: white
+  default: '#e1c2ad'
   type: QtColor
   desc: Foreground color of pinned unselected odd tabs.
 
 colors.tabs.pinned.odd.bg:
-  default: seagreen
+  default: '#8277ad'
   type: QtColor
   desc: Background color of pinned unselected odd tabs.
 
 colors.tabs.pinned.even.fg:
-  default: white
+  default: '#504945'
   type: QtColor
   desc: Foreground color of pinned unselected even tabs.
 
 colors.tabs.pinned.even.bg:
-  default: darkseagreen
+  default: '#81a97d'
   type: QtColor
   desc: Background color of pinned unselected even tabs.
 
 colors.tabs.pinned.selected.odd.fg:
-  default: white
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color of pinned selected odd tabs.
 
 colors.tabs.pinned.selected.odd.bg:
-  default: black
+  default: '#3f91c5'
   type: QtColor
   desc: Background color of pinned selected odd tabs.
 
 colors.tabs.pinned.selected.even.fg:
-  default: white
+  default: '#fbf1c7'
   type: QtColor
   desc: Foreground color of pinned selected even tabs.
 
 colors.tabs.pinned.selected.even.bg:
-  default: black
+  default: '#3f91c5'
   type: QtColor
   desc: Background color of pinned selected even tabs.
 
