Add test environments for Qt 6.2 and 6.3

--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,12 @@ minversion = 3.15
 [testenv]
 setenv =
     PYTEST_QT_API=pyqt5
-    pyqt{,512,513,514,515,5150}: LINK_PYQT_SKIP=true
+    QUTE_QT_WRAPPER=PyQt5
+    pyqt62: PYTEST_QT_API=pyqt6
+    pyqt62: QUTE_QT_WRAPPER=PyQt6
+    pyqt63: PYTEST_QT_API=pyqt6
+    pyqt63: QUTE_QT_WRAPPER=PyQt6
+    pyqt{,512,513,514,515,5150,62,63}: LINK_PYQT_SKIP=true
     cov: PYTEST_ADDOPTS=--cov --cov-report xml --cov-report=html --cov-report=
 passenv = PYTHON DISPLAY XAUTHORITY HOME USERNAME USER CI XDG_* QUTE_* DOCKER QT_QUICK_BACKEND FORCE_COLOR DBUS_SESSION_BUS_ADDRESS
 basepython =
@@ -32,6 +37,8 @@ deps =
     pyqt514: -r{toxinidir}/misc/requirements/requirements-pyqt-5.14.txt
     pyqt515: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.txt
     pyqt5150: -r{toxinidir}/misc/requirements/requirements-pyqt-5.15.0.txt
+    pyqt62: -r{toxinidir}/misc/requirements/requirements-pyqt-6.2.txt
+    pyqt63: -r{toxinidir}/misc/requirements/requirements-pyqt-6.3.txt
 commands =
     {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
