--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -138,6 +138,14 @@ jobs:
           - testenv: py311-pyqt515
             os: ubuntu-20.04
             python: "3.11-dev"
+          ### PyQt 6.2 (Python 3.9)
+          - testenv: py39-pyqt62
+            os: ubuntu-20.04
+            python: 3.9
+          ### PyQt 6.3 (Python 3.9)
+          - testenv: py39-pyqt63
+            os: ubuntu-20.04
+            python: 3.9
           ### macOS Big Sur: PyQt 5.15 (Python 3.9 to match PyInstaller env)
           - testenv: py39-pyqt515
             os: macos-11
