tests: Add some marks for Qt 5 / Qt 6

--- a/pytest.ini
+++ b/pytest.ini
@@ -36,6 +36,10 @@ markers =
     unicode_locale: Tests which need a unicode locale to work
     qtwebkit_pdf_imageformat_skip: Broken on QtWebKit with PDF image format plugin installed
     windows_skip: Tests which should be skipped on Windows
+    qt5_only: Tests which should only run with Qt 5
+    qt6_only: Tests which should only run with Qt 6
+    qt5_xfail: Tests which fail with Qt 5
+    qt6_xfail: Tests which fail with Qt 6
 qt_log_level_fail = WARNING
 # FIXME:qt6 clean up?
 qt_log_ignore =
