Adjust referrer handling for Qt 6
As suspected in a comment, ReducedReferrerGranularity does not exist anymore
with Chromium 90, and neither does an option for getting the full referrer back:

https://chromium-review.googlesource.com/c/chromium/src/+/2545444
https://bugs.chromium.org/p/chromium/issues/detail?id=1150018

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -679,7 +679,8 @@ content.headers.referer:
   type:
     name: String
     valid_values:
-      - always: "Always send the Referer."
+      - always: "Always send the Referer. With QtWebEngine 6.2+, this value is
+          unavailable and will act like `same-domain`."
       - never: "Never send the Referer. This is not recommended, as some sites
           may break."
       - same-domain: "Only send the Referer for the same domain. This will
