Remove unneeded old log ignores

--- a/pytest.ini
+++ b/pytest.ini
@@ -41,54 +41,22 @@ markers =
     qt5_xfail: Tests which fail with Qt 5
     qt6_xfail: Tests which fail with Qt 6
 qt_log_level_fail = WARNING
-# FIXME:qt6 clean up?
 qt_log_ignore =
-    ^SpellCheck: .*
-    ^SetProcessDpiAwareness failed: .*
-    ^QWindowsWindow::setGeometry(Dp)?: Unable to set geometry .*
-    ^QProcess: Destroyed while process .* is still running\.
-    ^"Method "GetAll" with signature "s" on interface "org\.freedesktop\.DBus\.Properties" doesn't exist
-    ^"Method \\"GetAll\\" with signature \\"s\\" on interface \\"org\.freedesktop\.DBus\.Properties\\" doesn't exist\\n"
-    ^propsReply "Method \\"GetAll\\" with signature \\"s\\" on interface \\"org\.freedesktop\.DBus\.Properties\\" doesn't exist\\n"
-    ^nmReply "Method \\"GetDevices\\" with signature \\"\\" on interface \\"org\.freedesktop\.NetworkManager\\" doesn't exist\\n"
-    ^"Object path cannot be empty"
-    ^virtual void QSslSocketBackendPrivate::transmit\(\) SSL write failed with error: -9805
-    ^virtual void QSslSocketBackendPrivate::transmit\(\) SSLRead failed with: -9805
-    ^Type conversion already registered from type .*
-    ^QNetworkReplyImplPrivate::error: Internal problem, this method must only be called once\.
-    ^QWaitCondition: Destroyed while threads are still waiting
-    ^QXcbXSettings::QXcbXSettings\(QXcbScreen\*\) Failed to get selection owner for XSETTINGS_S atom
+    # GitHub Actions
     ^QStandardPaths: XDG_RUNTIME_DIR not set, defaulting to .*
-    ^QObject::connect: Cannot connect \(null\)::stateChanged\(QNetworkSession::State\) to QNetworkReplyHttpImpl::_q_networkSessionStateChanged\(QNetworkSession::State\)
-    ^QXcbClipboard: Cannot transfer data, no data available
-    ^load glyph failed
-    ^Error when parsing the netrc file
-    ^Image of format '' blocked because it is not considered safe. If you are sure it is safe to do so, you can white-list the format by setting the environment variable QTWEBKIT_IMAGEFORMAT_WHITELIST=
-    ^QPainter::end: Painter ended with \d+ saved states
-    ^QSslSocket: cannot resolve .*
-    ^QSslSocket: cannot call unresolved function .*
-    ^Incompatible version of OpenSSL
-    ^QQuickWidget::invalidateRenderControl could not make context current
-    ^libpng warning: iCCP: known incorrect sRGB profile
-    ^inotify_add_watch\(".*"\) failed: "No space left on device"
-    ^QSettings::value: Empty key passed
-    ^Icon theme ".*" not found
-    ^Error receiving trust for a CA certificate
-    ^QBackingStore::endPaint\(\) called with active painter.*
-    ^QPaintDevice: Cannot destroy paint device that is being painted
-    ^DirectWrite: CreateFontFaceFromHDC\(\) failed .*
-    ^Attribute Qt::AA_ShareOpenGLContexts must be set before QCoreApplication is created\.
-    ^QHttpNetworkConnectionPrivate::_q_hostLookupFinished could not de-queue request, failed to report HostNotFoundError
+    # test_on_focus_changed_issue1484 on macOS
     ^The available OpenGL surface format was either not version 3\.2 or higher or not a Core Profile.*
+    # tests/unit/mainwindow/test_messageview.py and
+    # tests/unit/mainwindow/statusbar/test_textbase.py::test_resize
+    # on Windows
+    ^QWindowsWindow::setGeometry(Dp)?: Unable to set geometry .*
+    # tests/unit/commands/test_userscripts.py::test_killed_command
+    # on Windows
+    ^QProcess: Destroyed while process .* is still running\.
 xfail_strict = true
 filterwarnings =
     error
     default:Test process .* failed to terminate!:UserWarning
-    ignore:_SixMetaPathImporter\.exec_module\(\) not found; falling back to load_module\(\):ImportWarning
-    ignore:VendorImporter\.find_spec\(\) not found; falling back to find_module\(\):ImportWarning
-    ignore:_SixMetaPathImporter\.find_spec\(\) not found; falling back to find_module\(\):ImportWarning
-    # https://github.com/ionelmc/python-hunter/issues/97
-    ignore:The distutils\.sysconfig module is deprecated, use sysconfig instead:DeprecationWarning
     # https://github.com/certifi/python-certifi/issues/170
     ignore:path is deprecated\. Use files\(\) instead\. Refer to https.//importlib-resources\.readthedocs\.io/en/latest/using\.html#migrating-from-legacy for migration advice\.:DeprecationWarning:certifi.core
     # https://github.com/HypothesisWorks/hypothesis/issues/3309
