--- a/.pylintrc
+++ b/.pylintrc
@@ -72,7 +72,8 @@ no-docstring-rgx=(^_|^main$)
 class-const-naming-style = snake_case
 
 [FORMAT]
-max-line-length=88
+# FIXME:qt6 down to 88 again once we use black
+max-line-length=190
 ignore-long-lines=(<?https?://|file://|^# Copyright 201\d|link:)
 expected-line-ending-format=LF
 
