tox: Add a build-release-qt6 environment
This raises our minimum tox version from 3.15 to 3.20 to properly
support the environment name with empty factors:
https://github.com/tox-dev/tox/issues/1636

Distribution-wise, this hopefully isn't a problem: Debian Buster
(oldstable) had tox 3.7, Debian bullseye (stable) has 3.21. Similar
story for Ubuntu: 20.04 LTS has 3.13, 21.10 (and thus 22.04 LTS) has
3.21.

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@
 envlist = py38-pyqt515-cov,mypy,misc,vulture,flake8,pylint,pyroma,check-manifest,eslint,yamllint,actionlint
 distshare = {toxworkdir}
 skipsdist = true
-minversion = 3.15
+minversion = 3.20
 
 [testenv]
 setenv =
@@ -223,14 +223,18 @@ deps =
 commands =
     {envpython} -m sphinx -jauto -W --color {posargs} {toxinidir}/doc/extapi/ {toxinidir}/doc/extapi/_build/
 
-[testenv:build-release]
+[testenv:build-release{,-qt6}]
 basepython = {env:PYTHON:python3}
 passenv = *
+# Override default PyQt5 from [testenv]
+setenv =
+    qt6: QUTE_QT_WRAPPER=PyQt6
 usedevelop = true
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tox.txt
-    -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    !qt6: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    qt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
 commands =
