scripts: Initial Qt 6 support for build_release.py

--- a/tox.ini
+++ b/tox.ini
@@ -238,4 +238,5 @@ deps =
     -r{toxinidir}/misc/requirements/requirements-dev.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
 commands =
-    {envpython} {toxinidir}/scripts/dev/build_release.py {posargs}
+    !qt6: {envpython} {toxinidir}/scripts/dev/build_release.py {posargs}
+    qt6: {envpython} {toxinidir}/scripts/dev/build_release.py --qt6 {posargs}
