scripts: Pass through Qt 6 to PyInstaller

--- a/tox.ini
+++ b/tox.ini
@@ -156,13 +156,16 @@ commands =
     {envpython} scripts/dev/check_doc_changes.py {posargs}
     {envpython} scripts/asciidoc2html.py {posargs}
 
-[testenv:pyinstaller-{64,32}]
+[testenv:pyinstaller-{64,32}{,-qt6}]
 basepython = {env:PYTHON:python3}
 passenv = APPDATA HOME PYINSTALLER_DEBUG
+setenv =
+    qt6: PYINSTALLER_QT6=true
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-pyinstaller.txt
-    -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    !qt6: -r{toxinidir}/misc/requirements/requirements-pyqt.txt
+    qt6: -r{toxinidir}/misc/requirements/requirements-pyqt-6.txt
 commands =
     {envbindir}/pyinstaller --noconfirm misc/qutebrowser.spec
 
