--- a/pytest.ini
+++ b/pytest.ini
@@ -27,7 +27,6 @@ markers =
     no_ci: Tests which should not run on CI.
     qtwebengine_todo: Features still missing with QtWebEngine
     qtwebengine_skip: Tests not applicable with QtWebEngine
-    qtwebengine_notifications: Tests which need QtWebEngine notification support
     qtwebkit_skip: Tests not applicable with QtWebKit
     qtwebengine_flaky: Tests which are flaky (and currently skipped) with QtWebEngine
     qtwebengine_mac_xfail: Tests which fail on macOS with QtWebEngine
@@ -35,10 +34,10 @@ markers =
     no_invalid_lines: Don't fail on unparsable lines in end2end tests
     fake_os: Fake utils.is_* to a fake operating system
     unicode_locale: Tests which need a unicode locale to work
-    js_headers: Sets JS headers dynamically on QtWebEngine (unsupported on some versions)
     qtwebkit_pdf_imageformat_skip: Broken on QtWebKit with PDF image format plugin installed
     windows_skip: Tests which should be skipped on Windows
 qt_log_level_fail = WARNING
+# FIXME:qt6 clean up?
 qt_log_ignore =
     ^SpellCheck: .*
     ^SetProcessDpiAwareness failed: .*
