--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1685,6 +1685,7 @@ hints.selectors:
       - '[role="menuitem"]'
       - '[role="menuitemcheckbox"]'
       - '[role="menuitemradio"]'
+      - '[role="treeitem"]'
       - '[ng-click]'
       - '[ngClick]'
       - '[data-ng-click]'
