--- a/.pylintrc
+++ b/.pylintrc
@@ -58,8 +58,8 @@ disable=locally-disabled,
         missing-type-doc,
         missing-param-doc,
         useless-param-doc,
-        wrong-import-order,  # FIXME:qt6
-        ungrouped-imports,  # FIXME:qt6
+        wrong-import-order,  # FIXME:qt6 (lint)
+        ungrouped-imports,  # FIXME:qt6 (lint)
 
 [BASIC]
 function-rgx=[a-z_][a-z0-9_]{2,50}$
@@ -74,7 +74,7 @@ no-docstring-rgx=(^_|^main$)
 class-const-naming-style = snake_case
 
 [FORMAT]
-# FIXME:qt6 down to 88 again once we use black
+# FIXME:qt6 (lint) down to 88 again once we use black
 max-line-length=190
 ignore-long-lines=(<?https?://|file://|^# Copyright 201\d|link:)
 expected-line-ending-format=LF
