Add LinkedIn array.at quirk
Closes #7237

--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -613,6 +613,7 @@ content.site_specific_quirks.skip:
       - js-string-replaceall
       - js-globalthis
       - js-object-fromentries
+      - js-array-at
       - misc-krunker
       - misc-mathml-darkmode
     none_ok: true
