--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,33 +16,43 @@ jobs:
         include:
           - os: macos-10.15
             branch: master
+            toxenv: build-release
           - os: windows-2019
             args: --64bit
             branch: master
+            toxenv: build-release
           - os: windows-2019
             args: --32bit
             branch: master
+            toxenv: build-release
           - os: macos-10.15
             args: --debug
             branch: master
+            toxenv: build-release
           - os: windows-2019
             args: --64bit --debug
             branch: master
+            toxenv: build-release
           - os: windows-2019
             args: --32bit --debug
             branch: master
+            toxenv: build-release
 
           - os: macos-10.15
             branch: qt6-v2
+            toxenv: build-release-qt6
           - os: windows-2019
             args: --64bit
             branch: qt6-v2
+            toxenv: build-release-qt6
           - os: macos-10.15
             args: --debug
             branch: qt6-v2
+            toxenv: build-release-qt6
           - os: windows-2019
             args: --64bit --debug
             branch: qt6-v2
+            toxenv: build-release-qt6
     runs-on: "${{ matrix.os }}"
     timeout-minutes: 30
     steps:
@@ -72,7 +82,7 @@ jobs:
         run: |
           sed -i '' '/.-d., .--debug.,/s/$/ default=True,/' qutebrowser/qutebrowser.py
       - name: Run tox
-        run: "tox -e build-release -- --asciidoc ../asciidoc/asciidoc.py --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
+        run: "tox -e ${{ matrix.toxenv }} -- --asciidoc ../asciidoc/asciidoc.py --gh-token ${{ secrets.GITHUB_TOKEN }} ${{ matrix.args }}"
       - name: Wait 90s to avoid upload errors
         if: "contains(matrix.args, '--32bit')"
         run: "sleep 90"
