--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -48,22 +48,22 @@ jobs:
           - os: macos-10.15
             branch: qt6-v2
             toxenv: build-release-qt6
-            name: macos-qt6
+            name: qt6-macos
           - os: windows-2019
             args: --64bit
             branch: qt6-v2
             toxenv: build-release-qt6
-            name: windows-64bit-qt6
+            name: qt6-windows-64bit
           - os: macos-10.15
             args: --debug
             branch: qt6-v2
             toxenv: build-release-qt6
-            name: mac-debug-qt6
+            name: qt6-macos-debug
           - os: windows-2019
             args: --64bit --debug
             branch: qt6-v2
             toxenv: build-release-qt6
-            name: windows-64bit-debug-qt6
+            name: qt6-windows-64bit-debug
     runs-on: "${{ matrix.os }}"
     timeout-minutes: 30
     steps:
